# freecell

./: .clang-format  .clang-tidy  CMakeLists.txt  Freecell.js  Freecell.wasm  README.md
.github/workflows/: build.yml
include/: assets.h  callbacks.h  camera.h  card_sprites.h  color.h  constants.h  controller.h  debug.h  freecell.h  game.h  image.h  log.h  mesh.h  rect.h  render_system.h  renderer.h  shader.h  sprite.h  texture.h  ui_element.h  ui_layout.h  utils.h  vector.h  window.h  world.h
include/core/: aalloc.h  freecell.h  game.h  vector.h
include/game/: animation.h  assets.h  card.h  constants.h  controller.h  debug.h  freecell.h  game.h  input.h  input_action.h  render_system.h  ui_element.h  ui_layout.h  ui_sprites.h  ui_state.h  world.h
include/platform/: window.h
include/rendering/: color.h  image.h  mesh.h  primitives.h  rect.h  renderer.h  shader.h  sprite.h  texture.h
include/shaders/: main_vs.glsl
src/: assets.c  card_sprites.c  constants.c  controller.c  debug.c  freecell.c  freecell.rc  game.c  image.c  index.html  log.c  main.c  mesh.c  render_system.c  renderer.c  shader.c  test.c  texture.c  ui_element.c  ui_layout.c  utils.c  vector.c  window.c  world.c
src/core/: aalloc.c  freecell.c  game.c  log.c  vector.c
src/game/: animation.c  assets.c  card_sprites.c  constants.c  controller.c  debug.c  freecell.c  game.c  input.c  render_system.c  ui_element.c  ui_layout.c  ui_sprites.c  ui_state.c  world.c
src/game/shaders/: background_fs.glsl  background_vs.glsl  main_fs.glsl  main_fs_es.glsl  main_vs_es.glsl
src/platform/: window.c
src/rendering/: image.c  mesh.c  renderer.c  shader.c  texture.c
src/shaders/: background_fs.glsl  main_fs.glsl  main_vs.glsl
src/test/: test.c
